# Voronoi-Based-Hybrid-Astar

./: CMakeLists.txt  README.md  package.xml
devel/: .catkin  local_setup.sh
devel/include/ira_laser_tools/: laserscan_multi_mergerConfig.h  laserscan_virtualizerConfig.h
devel/include/ridgeback_msgs/: Fans.h  Lights.h  RGB.h  Status.h
devel/lib/astar/: astar
devel/lib/hybrid_astar/: hybrid_astar
devel/lib/ira_laser_tools/: laserscan_multi_merger  laserscan_virtualizer
devel/lib/pkgconfig/: astar.pc  hybrid_astar.pc  indoor_nav.pc  ira_laser_tools.pc  mecanum_gazebo_plugin.pc  ridgeback_6_axis_kinova_moveit_config.pc  ridgeback_7_axis_kinova_moveit_config.pc  ridgeback_control.pc  ridgeback_description.pc  ridgeback_dual_6_axis_kinova_moveit_config.pc  ridgeback_dual_7_axis_kinova_moveit_config.pc  ridgeback_dual_gen3_moveit_config.pc  ridgeback_dual_ur_moveit_config.pc  ridgeback_franka_description.pc  ridgeback_gazebo.pc  ridgeback_gazebo_plugins.pc  ridgeback_gen3_moveit_config.pc  ridgeback_iiwa_description.pc  ridgeback_iiwa_moveit_config.pc  ridgeback_kinova_bringup.pc  ridgeback_kinova_description.pc  (+7 more)
include/hybrid_astar/: constants.h  dubins.h  hybrid_astar.h  node2d.h  voronoi.h
launch/: hybrid_astar.launch
maps/: hospital_04.yaml
rviz/: visualization.rviz
src/: dubins.cpp  hybrid_astar.cpp  node2d.cpp  node4d.cpp  voronoi.cpp
src/hybrid_astar/: CMakeLists.txt  hybrid_astar_planner_plugin.xml  package.xml
src/hybrid_astar/include/hybrid_astar/: astar.h  constants.h  dubins.h  helper.h  hybrid_astar.h  hybrid_astar_planner.h  node2d.h  node4d.h  pure_pursuit.h  reeds_shepp.h  voronoi.h
src/hybrid_astar/launch/: hybrid_astar.launch
src/hybrid_astar/maps/: hospital_04.pgm  hospital_04.yaml  hospital_04_cropped.pgm  hospital_restricted.pgm  hospital_restricted.yaml  test.pgm  test.yaml
src/hybrid_astar/maps/voronoi/cache/10917222191326015076/: graphData
src/hybrid_astar/maps/voronoi/cache/13544218348664178828/: graphData
src/hybrid_astar/maps/voronoi/cache/13672953455004835416/: graphData  treeInfo
src/hybrid_astar/maps/voronoi/cache/2377184163961880032/: graphData  treeInfo
src/hybrid_astar/maps/voronoi/cache/3383668063215391064/: graphData
src/hybrid_astar/maps/voronoi/cache/6375780720344636208/: graphData  graphInfo  treeInfo
src/hybrid_astar/maps/voronoi/cache/9584077836908302785/: graphInfo  treeInfo
src/hybrid_astar/models/hospital__model/: model.config  model.sdf
src/hybrid_astar/models/hospital_restricted/: model.config  model.sdf
src/hybrid_astar/models/hospital_restricted_model/: model.config  model.sdf
src/hybrid_astar/models/hospital_restriction_walls/: model.config  model.sdf
src/hybrid_astar/models/test_01/: model.config  model.sdf
src/hybrid_astar/rosbags/: 20210409-013102.orig.bag  20210409-234343.bag  20210410-005725.bag  20210508-010746.bag  20210522-010409.bag  20210531-132410.bag  20210531-132509.bag  bag_to_csv.py  iteration_limits.bag  iteration_limits_bag.bag  iteration_limits_bag_voronoi.bag  test.bag
src/hybrid_astar/rosbags/20210410-005725/: test_summary.csv  tests.csv
src/hybrid_astar/rosbags/20210509-181116/: test_summary.csv
src/hybrid_astar/rosbags/20210510-002831/: test_summary.csv
src/hybrid_astar/rosbags/hospital_04/20210409-013102/: 20210409-013102.bag  tests.csv
src/hybrid_astar/rosbags/hospital_04/20210410-210809/: 20210410-210809.bag  test_summary.csv  tests.csv
src/hybrid_astar/rosbags/hospital_04/20210411-170845/: test_summary.csv
src/hybrid_astar/rosbags/hospital_04/20210412-230907/: 20210412-230907.bag  test_summary.csv  tests.csv
src/hybrid_astar/rosbags/hospital_04/20210413-111038/: 20210413-111038.bag  test_summary.csv  tests.csv
src/hybrid_astar/rosbags/hospital_04/20210413-232806/: 20210413-232806.bag  test_summary.csv
src/hybrid_astar/rosbags/hospital_04/20210414-172117/: 20210414-172117.bag  test_summary.csv
src/hybrid_astar/rosbags/hospital_04/20210415-225441/: 20210415-225441.bag  test_summary.csv  tests.csv
src/hybrid_astar/rosbags/hospital_04/hospital_env_monte_carlo_results/: test_summary.csv
src/hybrid_astar/rosbags/hybrid_astar_voronoi/: 20210515-004933.bag  test_summary.csv  tests.csv
src/hybrid_astar/rviz/: hybrid_astar.rviz  visualization.rviz
src/hybrid_astar/scripts/: monte_carlo_simulation.py  test.py  test_review.py
src/hybrid_astar/src/: astar.cpp  dubins.cpp  hybrid_astar.cpp  hybrid_astar_planner.cpp  node4d.cpp  pure_pursuit.cpp  reeds_shepp.cpp  voronoi.cpp
src/hybrid_astar/srv/: GlobalPath.srv  MonteCarloSim.srv
src/hybrid_astar/world/: hospital_04.world  hospital_restricted.world
src/indoor_nav/: CMakeLists.txt
world/: hospital_04.world  hospital_restricted.world
(+128 files in other folders)
